# csllm-1.0-pro

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  pyproject.toml
.knbase/: config.json  index.json  mindmap.md  session.json
configs/: debug.json  shakespeare.json
configs/versions/: v1-e0ccada1.json  v2-bcf2c5d8.json
core/bindings/: py_module.cpp
core/include/csllm/: attention.hpp  autograd.hpp  common.hpp  gemm.hpp  json.hpp  model.hpp  ops.hpp  sampler.hpp  serialize.hpp  tensor.hpp
core/src/: attention.cpp  autograd.cpp  json.cpp  model.cpp  ops_loss.cpp  ops_norm.cpp  ops_rope.cpp  optim.cpp  sampler.cpp  serialize.cpp  threadpool.cpp
csllm/: __init__.py  config.py  data.py  export.py  params.py  resources.py  runtime_template.py  tokenizer.py
datasets/: __init__.py  base.py
datasets/builtin/: __init__.py  csv.py  jsonl.py  text.py
datasets/raw/: .gitkeep  shakespeare-sample.txt  speeches.jsonl
doc/: plan.md  prompt.md
exports/release/: README.md  config.json  tokenizer.json
exports/release/cpp/: CMakeLists.txt
exports/release/cpp/include/csllm/: arena.hpp  optim.hpp  threadpool.hpp
exports/release/cpp/src/: arena.cpp  attention.cpp  build_info.cpp  gemm.cpp  model.cpp  ops_activation.cpp  ops_loss.cpp  ops_norm.cpp  ops_rope.cpp  sampler.cpp  serialize.cpp  tensor.cpp
exports/release/runtime/: load.py  requirements.txt
exports/v1/: config.json
gateway/: engine.py  inspection.py  main.py  schemas.py  settings.py  telemetry.py  versioning.py
gateway/routes/: __init__.py  config.py  datasets.py  inference.py  inspect.py  training.py
memory-bank/: architecture.md  design.md  memory.md  phase.md  prd.md  rules.md
tests/: reference.py  test_attention_capture.py  test_build.py  test_config_api.py  test_datasets.py  test_export.py  test_gateway.py  test_gradcheck.py  test_inspect_ws.py  test_inspection.py  test_model.py  test_ops.py  test_params.py  test_sampler.py  test_telemetry.py  test_tokenizer.py  test_training.py
train/: emit.py  sample.py  train.py  train_tokenizer.py
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css  theme.test.ts  theme.ts
web/src/api/: client.test.ts  client.ts  types.ts  ws.test.ts  ws.ts
web/src/components/: AttentionHeatmap.tsx  AttentionPanel.tsx  ConfiguratorPanel.test.ts  ConfiguratorPanel.tsx  DatasetBrowser.tsx  EmbeddingHeatmap.tsx  ExportModal.tsx  LossChart.tsx  PlaygroundPanel.tsx  ProbabilityChart.test.ts  ProbabilityChart.tsx  ProbabilityPanel.tsx  TokenText.tsx  TokenizerPanel.tsx  TrainingDashboard.tsx  TransformerGraph.tsx
web/src/hooks/: useDebounced.ts  useInspectStream.ts  useTrainingStream.test.ts  useTrainingStream.ts
